--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "django-environ (>=0.11.2)",
     "pillow (>=12.1.1,<13.0.0)",
     "django-storages (>=1.14.6,<2.0.0)",
-    "dnspython (>=2.8.0,<3.0.0)"
+    "dnspython (>=2.8.0,<3.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "drf-spectacular (>=0.29.0,<0.30.0)"
 ]
 
 
