--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,12 @@ dependencies = [
     "dnspython (>=2.8.0,<3.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
     "drf-spectacular (>=0.29.0,<0.30.0)",
-    "boto3 (>=1.42.47,<2.0.0)"
+    "boto3 (>=1.42.47,<2.0.0)",
+    "pyjwt (>=2.11.0,<3.0.0)",
+    "openai (>=2.20.0,<3.0.0)",
+    "anthropic (>=0.79.0,<0.80.0)",
+    "stripe (>=14.3.0,<15.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 
