--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,11 @@ dependencies = [
     "openai (>=2.20.0,<3.0.0)",
     "anthropic (>=0.79.0,<0.80.0)",
     "stripe (>=14.3.0,<15.0.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "opentelemetry-api (>=1.39.1,<2.0.0)",
+    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
+    "opentelemetry-instrumentation-django (>=0.60b1,<0.61)",
+    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)"
 ]
 
 
@@ -34,4 +38,7 @@ build-backend = "poetry.core.masonry.api"
 black = "^26.1.0"
 flake8 = "^7.3.0"
 isort = "^7.0.0"
+hypothesis = "^6.151.6"
+pytest = "^9.0.2"
+pytest-django = "^4.11.1"
 
