feat: Remove static OpenAPI schema, add Postman export command, and update Postman collection and infrastructure providers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,28 +17,43 @@ services:
     ports:
       - "6379:6379"
 
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8080:8080" # Dashboard
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     depends_on:
       - db
       - redis
     environment:
-      # Database
       DATABASE_URL: postgres://sovereign_user:sovereign_password@db:5432/sovereign_db
-      # Cache
       REDIS_URL: redis://redis:6379/1
-      # Security
       SECRET_KEY: dev_secret_key_change_in_prod
       DEBUG: "True"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.sovereign-app.rule=HostRegexp(`{subdomain:[a-z0-9-]+}.localhost`)"
+      - "traefik.http.routers.sovereign-app.entrypoints=web"
+      - "traefik.http.services.sovereign-app.loadbalancer.server.port=8000"
 
   worker:
     build: .
-    command: celery -A tenants worker -l info
+    command: celery -A core worker -l info
     volumes:
       - .:/app
     depends_on:
