--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,10 @@ dependencies = [
     "opentelemetry-api (>=1.39.1,<2.0.0)",
     "opentelemetry-sdk (>=1.39.1,<2.0.0)",
     "opentelemetry-instrumentation-django (>=0.60b1,<0.61)",
-    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)"
+    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
+    "celery (>=5.6.2,<6.0.0)",
+    "redis (>=7.1.1,<8.0.0)",
+    "elasticsearch-dsl (>=8.18.0,<9.0.0)"
 ]
 
 
