--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
     "celery (>=5.6.2,<6.0.0)",
     "redis (>=7.1.1,<8.0.0)",
-    "elasticsearch-dsl (>=8.18.0,<9.0.0)"
+    "elasticsearch-dsl (>=8.18.0,<9.0.0)",
+    "cryptography (>=46.0.5,<47.0.0)"
 ]
 
 
